# Real-time-network-threat-detection

./: README.md  Scapy.py  admin.py  app.py  app1.py  app2.py  docker-compose.yaml  prediction_consumer.py  pyproject.toml  schema_registry_client.py
Old/: app1.py  async_app.py  classify.py  consumer.py  json_producer.py  model.pkl  producer.py  server.py
