[tool.poetry]
name = "kafka-python"
version = "0.1.0"
description = ""
authors = ["Yogesh Shamlin Shinanth  <yogeshshamlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
